feat: Add system tray

--- a/qml.qrc
+++ b/qml.qrc
@@ -8,5 +8,6 @@
         <file>qml/ResizeMouseArea.qml</file>
         <file>qml/ControlledPage.qml</file>
         <file>qml/ControllerPage.qml</file>
+        <file>qml/MySystemTray.qml</file>
     </qresource>
 </RCC>
